src/gestaoflex/pfm-notify/prd/k8s-deployment.yaml
# Deployment
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: gflex
  name: pfm-notify
  labels: 
    app: pfm-notify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pfm-notify
  template:
    metadata:
      labels:
        app: pfm-notify
    spec:
      containers:
      - name: pfm-notify-container
        image: gestaoflex/pfm-notify:latest
        ports: 
          - containerPort: 3303

---
# Service
kind: Service
apiVersion: v1
metadata:
  name: pfm-notify
  namespace: gflex
spec:
  selector:
    app: pfm-notify
  ports:
  - name: server
    port: 3303
    targetPort: 3303

---
